--- a/info.plist
+++ b/info.plist
@@ -6,11 +6,24 @@
 	<string>com.konfido.pkmanager</string>
 	<key>connections</key>
 	<dict>
-		<key>1AEDAAAF-3EF3-4207-A4F7-E5526124CF0A</key>
+		<key>08F2981C-D4E2-410E-A425-1894C282D921</key>
 		<array>
 			<dict>
 				<key>destinationuid</key>
 				<string>F6EA4B04-7578-4F5B-94E7-E8FF02CC1971</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
+		<key>1AEDAAAF-3EF3-4207-A4F7-E5526124CF0A</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>B0A2BD2F-66DA-4449-94F6-177A89A2338D</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
@@ -109,6 +122,19 @@
 				<false/>
 			</dict>
 		</array>
+		<key>B0A2BD2F-66DA-4449-94F6-177A89A2338D</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>08F2981C-D4E2-410E-A425-1894C282D921</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
 		<key>B69DC6BC-8CE9-458D-BA4B-434552FBEFE8</key>
 		<array>
 			<dict>
@@ -190,6 +216,183 @@
 		<dict>
 			<key>config</key>
 			<dict>
+				<key>alfredfiltersresults</key>
+				<false/>
+				<key>alfredfiltersresultsmatchmode</key>
+				<integer>0</integer>
+				<key>argumenttreatemptyqueryasnil</key>
+				<true/>
+				<key>argumenttrimmode</key>
+				<integer>0</integer>
+				<key>argumenttype</key>
+				<integer>1</integer>
+				<key>escaping</key>
+				<integer>0</integer>
+				<key>keyword</key>
+				<string>s</string>
+				<key>queuedelaycustom</key>
+				<integer>3</integer>
+				<key>queuedelayimmediatelyinitially</key>
+				<true/>
+				<key>queuedelaymode</key>
+				<integer>0</integer>
+				<key>queuemode</key>
+				<integer>1</integer>
+				<key>runningsubtext</key>
+				<string></string>
+				<key>script</key>
+				<string></string>
+				<key>scriptargtype</key>
+				<integer>1</integer>
+				<key>scriptfile</key>
+				<string>PKM.py</string>
+				<key>subtext</key>
+				<string></string>
+				<key>title</key>
+				<string></string>
+				<key>type</key>
+				<integer>8</integer>
+				<key>withspace</key>
+				<true/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.input.scriptfilter</string>
+			<key>uid</key>
+			<string>55C006BE-C9FB-48B7-899E-3E143BCA82BA</string>
+			<key>version</key>
+			<integer>3</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>triggerid</key>
+				<string>search</string>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.trigger.external</string>
+			<key>uid</key>
+			<string>40FAF977-FF27-4A96-8657-DDC6E3EB4B66</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>externaltriggerid</key>
+				<string>next</string>
+				<key>passinputasargument</key>
+				<true/>
+				<key>passvariables</key>
+				<true/>
+				<key>workflowbundleid</key>
+				<string>self</string>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.output.callexternaltrigger</string>
+			<key>uid</key>
+			<string>9AEF8A4C-224C-4E4D-B78F-ECE53BD1A8DA</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>argument</key>
+				<string></string>
+				<key>passthroughargument</key>
+				<false/>
+				<key>variables</key>
+				<dict/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.utility.argument</string>
+			<key>uid</key>
+			<string>DD9EFEE7-F576-4FAC-BAF3-1B72E580860C</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>conditions</key>
+				<array>
+					<dict>
+						<key>inputstring</key>
+						<string>{var:next_1}</string>
+						<key>matchcasesensitive</key>
+						<false/>
+						<key>matchmode</key>
+						<integer>4</integer>
+						<key>matchstring</key>
+						<string>show</string>
+						<key>outputlabel</key>
+						<string>next</string>
+						<key>uid</key>
+						<string>553EEA58-59AB-4BBD-B365-8A06E75957DF</string>
+					</dict>
+				</array>
+				<key>elselabel</key>
+				<string>fast</string>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.utility.conditional</string>
+			<key>uid</key>
+			<string>240F2307-D2CC-4508-AA90-839A3DC0A7B4</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>alfredfiltersresults</key>
+				<false/>
+				<key>alfredfiltersresultsmatchmode</key>
+				<integer>0</integer>
+				<key>argumenttreatemptyqueryasnil</key>
+				<true/>
+				<key>argumenttrimmode</key>
+				<integer>0</integer>
+				<key>argumenttype</key>
+				<integer>1</integer>
+				<key>escaping</key>
+				<integer>0</integer>
+				<key>keyword</key>
+				<string>n</string>
+				<key>queuedelaycustom</key>
+				<integer>3</integer>
+				<key>queuedelayimmediatelyinitially</key>
+				<true/>
+				<key>queuedelaymode</key>
+				<integer>0</integer>
+				<key>queuemode</key>
+				<integer>1</integer>
+				<key>runningsubtext</key>
+				<string></string>
+				<key>script</key>
+				<string></string>
+				<key>scriptargtype</key>
+				<integer>1</integer>
+				<key>scriptfile</key>
+				<string>New.py</string>
+				<key>subtext</key>
+				<string></string>
+				<key>title</key>
+				<string></string>
+				<key>type</key>
+				<integer>8</integer>
+				<key>withspace</key>
+				<true/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.input.scriptfilter</string>
+			<key>uid</key>
+			<string>7B0264D7-E3F1-4C35-82E5-7080DA5D08EE</string>
+			<key>version</key>
+			<integer>3</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
 				<key>argumenttype</key>
 				<integer>2</integer>
 				<key>keyword</key>
@@ -205,6 +408,23 @@
 			<string>alfred.workflow.input.keyword</string>
 			<key>uid</key>
 			<string>E1CFB6A0-024A-4699-9981-0BF9DEA5422A</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>delimiter</key>
+				<string>|</string>
+				<key>trimarguments</key>
+				<true/>
+				<key>variableprefix</key>
+				<string>next_</string>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.utility.split</string>
+			<key>uid</key>
+			<string>C468F035-82C9-477F-A52F-28163F055F53</string>
 			<key>version</key>
 			<integer>1</integer>
 		</dict>
@@ -231,21 +451,62 @@
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>externaltriggerid</key>
-				<string>next</string>
-				<key>passinputasargument</key>
-				<true/>
-				<key>passvariables</key>
-				<true/>
-				<key>workflowbundleid</key>
-				<string>self</string>
+				<key>action</key>
+				<integer>0</integer>
+				<key>argument</key>
+				<integer>3</integer>
+				<key>argumenttext</key>
+				<string>refresh|</string>
+				<key>focusedappvariable</key>
+				<false/>
+				<key>focusedappvariablename</key>
+				<string></string>
+				<key>hotkey</key>
+				<integer>15</integer>
+				<key>hotmod</key>
+				<integer>1310720</integer>
+				<key>hotstring</key>
+				<string>R</string>
+				<key>leftcursor</key>
+				<false/>
+				<key>modsmode</key>
+				<integer>0</integer>
+				<key>relatedApps</key>
+				<array>
+					<string>abnerworks.Typora</string>
+				</array>
+				<key>relatedAppsMode</key>
+				<integer>1</integer>
 			</dict>
 			<key>type</key>
-			<string>alfred.workflow.output.callexternaltrigger</string>
+			<string>alfred.workflow.trigger.hotkey</string>
 			<key>uid</key>
-			<string>9AEF8A4C-224C-4E4D-B78F-ECE53BD1A8DA</string>
+			<string>613C3561-AFF4-4248-8716-69A09A528105</string>
 			<key>version</key>
-			<integer>1</integer>
+			<integer>2</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>concurrently</key>
+				<false/>
+				<key>escaping</key>
+				<integer>0</integer>
+				<key>script</key>
+				<string></string>
+				<key>scriptargtype</key>
+				<integer>1</integer>
+				<key>scriptfile</key>
+				<string>action_fast.py</string>
+				<key>type</key>
+				<integer>8</integer>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.script</string>
+			<key>uid</key>
+			<string>FCBE6F87-6FFF-4D6C-938B-87588E77E108</string>
+			<key>version</key>
+			<integer>2</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -310,188 +571,23 @@
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>argument</key>
-				<string></string>
-				<key>passthroughargument</key>
-				<false/>
-				<key>variables</key>
-				<dict/>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.utility.argument</string>
-			<key>uid</key>
-			<string>DD9EFEE7-F576-4FAC-BAF3-1B72E580860C</string>
-			<key>version</key>
-			<integer>1</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>conditions</key>
-				<array>
-					<dict>
-						<key>inputstring</key>
-						<string>{var:next_1}</string>
-						<key>matchcasesensitive</key>
-						<false/>
-						<key>matchmode</key>
-						<integer>4</integer>
-						<key>matchstring</key>
-						<string>show</string>
-						<key>outputlabel</key>
-						<string>next</string>
-						<key>uid</key>
-						<string>553EEA58-59AB-4BBD-B365-8A06E75957DF</string>
-					</dict>
-				</array>
-				<key>elselabel</key>
-				<string>fast</string>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.utility.conditional</string>
-			<key>uid</key>
-			<string>240F2307-D2CC-4508-AA90-839A3DC0A7B4</string>
-			<key>version</key>
-			<integer>1</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>delimiter</key>
-				<string>|</string>
-				<key>trimarguments</key>
-				<true/>
-				<key>variableprefix</key>
-				<string>next_</string>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.utility.split</string>
-			<key>uid</key>
-			<string>C468F035-82C9-477F-A52F-28163F055F53</string>
-			<key>version</key>
-			<integer>1</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>triggerid</key>
-				<string>search</string>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.trigger.external</string>
-			<key>uid</key>
-			<string>40FAF977-FF27-4A96-8657-DDC6E3EB4B66</string>
-			<key>version</key>
-			<integer>1</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>action</key>
-				<integer>0</integer>
-				<key>argument</key>
-				<integer>3</integer>
-				<key>argumenttext</key>
-				<string>refresh|</string>
-				<key>focusedappvariable</key>
-				<false/>
-				<key>focusedappvariablename</key>
-				<string></string>
-				<key>hotkey</key>
-				<integer>0</integer>
-				<key>hotmod</key>
-				<integer>0</integer>
-				<key>hotstring</key>
-				<string></string>
-				<key>leftcursor</key>
-				<false/>
-				<key>modsmode</key>
-				<integer>0</integer>
-				<key>relatedApps</key>
-				<array>
-					<string>abnerworks.Typora</string>
-				</array>
-				<key>relatedAppsMode</key>
-				<integer>1</integer>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.trigger.hotkey</string>
-			<key>uid</key>
-			<string>613C3561-AFF4-4248-8716-69A09A528105</string>
-			<key>version</key>
-			<integer>2</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>alfredfiltersresults</key>
-				<false/>
-				<key>alfredfiltersresultsmatchmode</key>
-				<integer>0</integer>
-				<key>argumenttreatemptyqueryasnil</key>
-				<true/>
-				<key>argumenttrimmode</key>
-				<integer>0</integer>
 				<key>argumenttype</key>
 				<integer>1</integer>
-				<key>escaping</key>
-				<integer>0</integer>
 				<key>keyword</key>
-				<string>s</string>
-				<key>queuedelaycustom</key>
-				<integer>3</integer>
-				<key>queuedelayimmediatelyinitially</key>
-				<true/>
-				<key>queuedelaymode</key>
-				<integer>0</integer>
-				<key>queuemode</key>
-				<integer>1</integer>
-				<key>runningsubtext</key>
-				<string></string>
-				<key>script</key>
-				<string></string>
-				<key>scriptargtype</key>
-				<integer>1</integer>
-				<key>scriptfile</key>
-				<string>PKM.py</string>
+				<string>sl</string>
 				<key>subtext</key>
 				<string></string>
-				<key>title</key>
-				<string></string>
-				<key>type</key>
-				<integer>8</integer>
+				<key>text</key>
+				<string>Show markdown links</string>
 				<key>withspace</key>
 				<true/>
 			</dict>
 			<key>type</key>
-			<string>alfred.workflow.input.scriptfilter</string>
+			<string>alfred.workflow.input.keyword</string>
 			<key>uid</key>
-			<string>55C006BE-C9FB-48B7-899E-3E143BCA82BA</string>
+			<string>B0A2BD2F-66DA-4449-94F6-177A89A2338D</string>
 			<key>version</key>
-			<integer>3</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>concurrently</key>
-				<false/>
-				<key>escaping</key>
-				<integer>0</integer>
-				<key>script</key>
-				<string></string>
-				<key>scriptargtype</key>
-				<integer>1</integer>
-				<key>scriptfile</key>
-				<string>action_fast.py</string>
-				<key>type</key>
-				<integer>8</integer>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.action.script</string>
-			<key>uid</key>
-			<string>FCBE6F87-6FFF-4D6C-938B-87588E77E108</string>
-			<key>version</key>
-			<integer>2</integer>
+			<integer>1</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -499,9 +595,7 @@
 				<key>action</key>
 				<integer>0</integer>
 				<key>argument</key>
-				<integer>3</integer>
-				<key>argumenttext</key>
-				<string>s </string>
+				<integer>0</integer>
 				<key>focusedappvariable</key>
 				<false/>
 				<key>focusedappvariablename</key>
@@ -509,7 +603,7 @@
 				<key>hotkey</key>
 				<integer>37</integer>
 				<key>hotmod</key>
-				<integer>1572864</integer>
+				<integer>1048576</integer>
 				<key>hotstring</key>
 				<string>L</string>
 				<key>leftcursor</key>
@@ -533,51 +627,22 @@
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>alfredfiltersresults</key>
+				<key>argument</key>
+				<string></string>
+				<key>passthroughargument</key>
 				<false/>
-				<key>alfredfiltersresultsmatchmode</key>
-				<integer>0</integer>
-				<key>argumenttreatemptyqueryasnil</key>
-				<true/>
-				<key>argumenttrimmode</key>
-				<integer>0</integer>
-				<key>argumenttype</key>
-				<integer>1</integer>
-				<key>escaping</key>
-				<integer>0</integer>
-				<key>keyword</key>
-				<string>n</string>
-				<key>queuedelaycustom</key>
-				<integer>3</integer>
-				<key>queuedelayimmediatelyinitially</key>
-				<true/>
-				<key>queuedelaymode</key>
-				<integer>0</integer>
-				<key>queuemode</key>
-				<integer>1</integer>
-				<key>runningsubtext</key>
-				<string></string>
-				<key>script</key>
-				<string></string>
-				<key>scriptargtype</key>
-				<integer>1</integer>
-				<key>scriptfile</key>
-				<string>New.py</string>
-				<key>subtext</key>
-				<string></string>
-				<key>title</key>
-				<string></string>
-				<key>type</key>
-				<integer>8</integer>
-				<key>withspace</key>
-				<true/>
+				<key>variables</key>
+				<dict>
+					<key>next_1</key>
+					<string>show_markdown_links</string>
+				</dict>
 			</dict>
 			<key>type</key>
-			<string>alfred.workflow.input.scriptfilter</string>
+			<string>alfred.workflow.utility.argument</string>
 			<key>uid</key>
-			<string>7B0264D7-E3F1-4C35-82E5-7080DA5D08EE</string>
+			<string>08F2981C-D4E2-410E-A425-1894C282D921</string>
 			<key>version</key>
-			<integer>3</integer>
+			<integer>1</integer>
 		</dict>
 	</array>
 	<key>readme</key>
@@ -589,123 +654,137 @@
 - Refresh meta-data in YAML frontier</string>
 	<key>uidata</key>
 	<dict>
+		<key>08F2981C-D4E2-410E-A425-1894C282D921</key>
+		<dict>
+			<key>xpos</key>
+			<integer>390</integer>
+			<key>ypos</key>
+			<integer>430</integer>
+		</dict>
 		<key>1AEDAAAF-3EF3-4207-A4F7-E5526124CF0A</key>
 		<dict>
 			<key>note</key>
-			<string>Backlinks</string>
+			<string>MarkDown Links</string>
 			<key>xpos</key>
-			<integer>250</integer>
+			<integer>50</integer>
 			<key>ypos</key>
-			<integer>395</integer>
+			<integer>400</integer>
 		</dict>
 		<key>240F2307-D2CC-4508-AA90-839A3DC0A7B4</key>
 		<dict>
 			<key>xpos</key>
-			<integer>895</integer>
+			<integer>860</integer>
 			<key>ypos</key>
-			<integer>160</integer>
+			<integer>135</integer>
 		</dict>
 		<key>40FAF977-FF27-4A96-8657-DDC6E3EB4B66</key>
 		<dict>
 			<key>xpos</key>
-			<integer>250</integer>
+			<integer>50</integer>
 			<key>ypos</key>
-			<integer>270</integer>
+			<integer>10</integer>
 		</dict>
 		<key>55C006BE-C9FB-48B7-899E-3E143BCA82BA</key>
 		<dict>
 			<key>note</key>
 			<string>Search</string>
 			<key>xpos</key>
-			<integer>535</integer>
+			<integer>510</integer>
 			<key>ypos</key>
-			<integer>270</integer>
+			<integer>10</integer>
 		</dict>
 		<key>60D6B06A-D829-4B80-8C8E-33ADB0A159B2</key>
 		<dict>
 			<key>xpos</key>
-			<integer>445</integer>
+			<integer>390</integer>
 			<key>ypos</key>
-			<integer>40</integer>
+			<integer>170</integer>
 		</dict>
 		<key>613C3561-AFF4-4248-8716-69A09A528105</key>
 		<dict>
 			<key>note</key>
 			<string>Update YAML</string>
 			<key>xpos</key>
-			<integer>895</integer>
+			<integer>860</integer>
 			<key>ypos</key>
-			<integer>270</integer>
+			<integer>245</integer>
 		</dict>
 		<key>7B0264D7-E3F1-4C35-82E5-7080DA5D08EE</key>
 		<dict>
 			<key>note</key>
 			<string>New</string>
 			<key>xpos</key>
-			<integer>535</integer>
+			<integer>510</integer>
 			<key>ypos</key>
-			<integer>400</integer>
+			<integer>140</integer>
 		</dict>
 		<key>9AEF8A4C-224C-4E4D-B78F-ECE53BD1A8DA</key>
 		<dict>
 			<key>colorindex</key>
 			<integer>8</integer>
 			<key>xpos</key>
-			<integer>1150</integer>
+			<integer>1115</integer>
 			<key>ypos</key>
-			<integer>125</integer>
+			<integer>100</integer>
+		</dict>
+		<key>B0A2BD2F-66DA-4449-94F6-177A89A2338D</key>
+		<dict>
+			<key>xpos</key>
+			<integer>220</integer>
+			<key>ypos</key>
+			<integer>400</integer>
 		</dict>
 		<key>B69DC6BC-8CE9-458D-BA4B-434552FBEFE8</key>
 		<dict>
 			<key>colorindex</key>
 			<integer>8</integer>
 			<key>xpos</key>
-			<integer>250</integer>
+			<integer>50</integer>
 			<key>ypos</key>
-			<integer>140</integer>
+			<integer>270</integer>
 		</dict>
 		<key>C468F035-82C9-477F-A52F-28163F055F53</key>
 		<dict>
 			<key>note</key>
 			<string>next_</string>
 			<key>xpos</key>
-			<integer>780</integer>
+			<integer>745</integer>
 			<key>ypos</key>
-			<integer>170</integer>
+			<integer>145</integer>
 		</dict>
 		<key>DD9EFEE7-F576-4FAC-BAF3-1B72E580860C</key>
 		<dict>
 			<key>xpos</key>
-			<integer>1050</integer>
+			<integer>1015</integer>
 			<key>ypos</key>
-			<integer>155</integer>
+			<integer>130</integer>
 		</dict>
 		<key>E1CFB6A0-024A-4699-9981-0BF9DEA5422A</key>
 		<dict>
 			<key>note</key>
 			<string>Config</string>
 			<key>xpos</key>
-			<integer>250</integer>
+			<integer>220</integer>
 			<key>ypos</key>
-			<integer>10</integer>
+			<integer>140</integer>
 		</dict>
 		<key>F6EA4B04-7578-4F5B-94E7-E8FF02CC1971</key>
 		<dict>
 			<key>note</key>
 			<string>Next / Show</string>
 			<key>xpos</key>
-			<integer>535</integer>
+			<integer>510</integer>
 			<key>ypos</key>
-			<integer>140</integer>
+			<integer>270</integer>
 		</dict>
 		<key>FCBE6F87-6FFF-4D6C-938B-87588E77E108</key>
 		<dict>
 			<key>note</key>
 			<string>Fast</string>
 			<key>xpos</key>
-			<integer>1155</integer>
+			<integer>1120</integer>
 			<key>ypos</key>
-			<integer>270</integer>
+			<integer>245</integer>
 		</dict>
 	</dict>
 	<key>variables</key>
@@ -723,7 +802,7 @@
 		<string>notes_path</string>
 	</array>
 	<key>version</key>
-	<string>1.5.0</string>
+	<string>1.6.0</string>
 	<key>webaddress</key>
 	<string>https://github.com/Konfido/alfred-pkmanager</string>
 </dict>
